--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-roll-picker": "^1.0.6",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "9.4.0",
+    "react-native-swipeout": "2.3.6",
     "react-native-thumbnail": "1.1.3",
     "react-native-vector-icons": "6.4.2",
     "react-native-video": "4.4.2",
