--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@react-native-community/async-storage": "^1.6.1",
     "@react-native-community/blur": "^3.3.1",
     "@react-native-community/viewpager": "^1.1.7",
+    "install": "^0.13.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "npm": "^6.11.3",
     "pinyin": "^2.9.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
@@ -19,6 +21,7 @@
     "react-native-audio": "^4.3.0",
     "react-native-camera": "1.9.1",
     "react-native-circular-progress": "^1.3.0",
+    "react-native-contacts": "4.0.2",
     "react-native-fs": "2.13.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-crop-picker": "0.24.1",
@@ -29,10 +32,11 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-roll-picker": "^1.0.6",
     "react-native-sound": "^0.11.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "9.4.0",
     "react-native-swipeout": "2.3.6",
     "react-native-switchbutton": "^0.4.6",
-    "react-native-thumbnail": "1.1.3",
+    "react-native-thumbnail": "^1.1.3",
     "react-native-vector-icons": "6.4.2",
     "react-native-video": "4.4.2",
     "react-navigation": "^3.11.1",
