--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-audio": "^4.3.0",
     "react-native-camera": "1.9.1",
     "react-native-circular-progress": "^1.3.0",
-    "react-native-contacts": "4.0.2",
+    "react-native-contacts": "^4.0.2",
     "react-native-event-bus": "^1.0.0",
     "react-native-fs": "2.13.3",
     "react-native-gesture-handler": "^1.3.0",
