--- a/.gitignore
+++ b/.gitignore
@@ -22,13 +22,14 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
-# Android/IntelliJ
+# Android/IntelliJ/Editor
 #
 build/
 .idea
 .gradle
 local.properties
 *.iml
+.vscode/
 
 # node.js
 #
@@ -55,4 +56,3 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-.vscode/
